Fixed not centered product name when it doesn't fit single line

--- a/web/css/layout/listing/_products.less
+++ b/web/css/layout/listing/_products.less
@@ -247,6 +247,9 @@
 
             .product-item-details {
                 .lib-css(align-items, @listing-grid-item__align-items);
+                & when (@listing-grid-item__align-items = center) {
+                    text-align: center;
+                }
             }
 
             // Name and price in a single line
